fix error in header with dark mode

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,4 +1,5 @@
 $silver-color: #ACACAC;
+$blue-color: #00A3FF;
 $medium-color-blue: #212E48;
 $dark-color-blue: #242435;
 $main-background: #13131d;
